# backend/biz/handler/cart.go
@@ -23,15 +23,15 @@ type userIdReq struct {
 	UserId uint32 `json:"userid" binding:"required"`
 }
 
-// @Summary 添加商品到购物车
-// @Description 添加商品到指定用户的购物车
-// @Tags cart
-// @Produce json
-// @Param input body addItemReq true "商品和用户信息"
-// @Success 200 "成功"
-// @Failure 400 {object} errorReturn "请求格式错误"
-// @Failure 500 {object} errorReturn "服务器错误"
-// @Router /cart/additem [post]
+//	@Summary		添加商品到购物车
+//	@Description	添加商品到指定用户的购物车
+//	@Tags			cart
+//	@Produce		json
+//	@Param			input	body	addItemReq	true	"商品和用户信息"
+//	@Success		200		"成功"
+//	@Failure		400		{object}	errorReturn	"请求格式错误"
+//	@Failure		500		{object}	errorReturn	"服务器错误"
+//	@Router			/cart/additem [post]
 func CartAddItem(c *gin.Context) {
 	req := addItemReq{}
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -52,15 +52,15 @@ func CartAddItem(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{})
 }
 
-// @Summary 获取购物车
-// @Description 获取指定用户的购物车中的商品
-// @Tags cart
-// @Produce json
-// @Param input body userIdReq true "用户id"
-// @Success 200 {object} []cartItem "购物车中的商品"
-// @Failure 400 {object} errorReturn "请求格式错误"
-// @Failure 500 {object} errorReturn "服务器错误"
-// @Router /cart/get [get]
+//	@Summary		获取购物车
+//	@Description	获取指定用户的购物车中的商品
+//	@Tags			cart
+//	@Produce		json
+//	@Param			input	body		userIdReq	true	"用户id"
+//	@Success		200		{object}	[]cartItem	"购物车中的商品"
+//	@Failure		400		{object}	errorReturn	"请求格式错误"
+//	@Failure		500		{object}	errorReturn	"服务器错误"
+//	@Router			/cart/get [get]
 func CartGet(c *gin.Context) {
 	req := userIdReq{}
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -79,15 +79,15 @@ func CartGet(c *gin.Context) {
 	})
 }
 
-// @Summary 清空购物车
-// @Description 清空指定用户的购物车
-// @Tags cart
-// @Produce json
-// @Param input body userIdReq true "用户id"
-// @Success 200 "成功"
-// @Failure 400 {object} errorReturn "请求格式错误"
-// @Failure 500 {object} errorReturn "服务器错误"
-// @Router /cart/empty [post]
+//	@Summary		清空购物车
+//	@Description	清空指定用户的购物车
+//	@Tags			cart
+//	@Produce		json
+//	@Param			input	body	userIdReq	true	"用户id"
+//	@Success		200		"成功"
+//	@Failure		400		{object}	errorReturn	"请求格式错误"
+//	@Failure		500		{object}	errorReturn	"服务器错误"
+//	@Router			/cart/empty [post]
 func CartEmpty(c *gin.Context) {
 	req := userIdReq{}
 	if err := c.ShouldBindJSON(&req); err != nil {
