# backend/biz/handler/test_handler/test_auth.go
@@ -26,15 +26,15 @@ type verifyOutput struct {
 	Userid uint32
 }
 
-// @Summary	获取token
-// @Description	对于给定的userid，为它分发一个token
-// @Tags test/auth
-// @Produce	json
-// @Param		input	body		useridInput	true	"用户id"
-// @Success	200		{object}	tokenInput "token"
-// @Failure	400		{object}	errorReturn "请求格式错误"
-// @Failure	500		{object}	errorReturn "服务器错误"
-// @Router		/test/auth/deliver [get]
+//	@Summary		获取token
+//	@Description	对于给定的userid，为它分发一个token
+//	@Tags			test/auth
+//	@Produce		json
+//	@Param			input	body		useridInput	true	"用户id"
+//	@Success		200		{object}	tokenInput	"token"
+//	@Failure		400		{object}	errorReturn	"请求格式错误"
+//	@Failure		500		{object}	errorReturn	"服务器错误"
+//	@Router			/test/auth/deliver [get]
 func DeliverToken(c *gin.Context) {
 	input := useridInput{}
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -53,15 +53,15 @@ func DeliverToken(c *gin.Context) {
 	})
 }
 
-// @Summary	验证token
-// @Description	验证一个token是否有效，以及属于哪个用户。会自动为token续期
-// @Tags test/auth
-// @Produce	json
-// @Param		input	body		tokenInput	true	"token"
-// @Success	200		{object}	verifyOutput "结果"
-// @Failure	400		{object}	errorReturn "请求格式错误"
-// @Failure	500		{object}	errorReturn "服务器错误"
-// @Router		/test/auth/verify [get]
+//	@Summary		验证token
+//	@Description	验证一个token是否有效，以及属于哪个用户。会自动为token续期
+//	@Tags			test/auth
+//	@Produce		json
+//	@Param			input	body		tokenInput		true	"token"
+//	@Success		200		{object}	verifyOutput	"结果"
+//	@Failure		400		{object}	errorReturn		"请求格式错误"
+//	@Failure		500		{object}	errorReturn		"服务器错误"
+//	@Router			/test/auth/verify [get]
 func VerifyToken(c *gin.Context) {
 	input := tokenInput{}
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -81,15 +81,15 @@ func VerifyToken(c *gin.Context) {
 	})
 }
 
-// @Summary	删除token
-// @Description 删除一个token，即退出该用户在该机器上的登录
-// @Tags test/auth
-// @Produce	json
-// @Param		input	body		tokenInput	true	"token"
-// @Success	200		"成功"
-// @Failure	400		{object}	errorReturn "请求格式错误"
-// @Failure	500		{object}	errorReturn "服务器错误"
-// @Router		/test/auth/delete [get]
+//	@Summary		删除token
+//	@Description	删除一个token，即退出该用户在该机器上的登录
+//	@Tags			test/auth
+//	@Produce		json
+//	@Param			input	body	tokenInput	true	"token"
+//	@Success		200		"成功"
+//	@Failure		400		{object}	errorReturn	"请求格式错误"
+//	@Failure		500		{object}	errorReturn	"服务器错误"
+//	@Router			/test/auth/delete [get]
 func DeleteToken(c *gin.Context) {
 	input := tokenInput{}
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -106,15 +106,15 @@ func DeleteToken(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
-// @Summary	删除所有token
-// @Description 删除一个用户的所有token，即退出该用户在所有机器上的登录
-// @Tags test/auth
-// @Produce	json
-// @Param		input	body		useridInput	true	"token"
-// @Success	200		"成功"
-// @Failure	400		{object}	errorReturn "请求格式错误"
-// @Failure	500		{object}	errorReturn "服务器错误"
-// @Router		/test/auth/deleteall [get]
+//	@Summary		删除所有token
+//	@Description	删除一个用户的所有token，即退出该用户在所有机器上的登录
+//	@Tags			test/auth
+//	@Produce		json
+//	@Param			input	body	useridInput	true	"token"
+//	@Success		200		"成功"
+//	@Failure		400		{object}	errorReturn	"请求格式错误"
+//	@Failure		500		{object}	errorReturn	"服务器错误"
+//	@Router			/test/auth/deleteall [get]
 func DeleteAllTokens(c *gin.Context) {
 	input := useridInput{}
 	if err := c.ShouldBindJSON(&input); err != nil {
