# backend/docs/swagger.json
@@ -130,6 +130,130 @@
                 }
             }
         },
+        "/order/cancel": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "parameters": [
+                    {
+                        "description": "订单id",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.OrderIdReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功"
+                    },
+                    "400": {
+                        "description": "请求格式错误",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorReturn"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorReturn"
+                        }
+                    }
+                }
+            }
+        },
+        "/order/list": {
+            "get": {
+                "description": "获取用户的订单列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "订单列表",
+                "parameters": [
+                    {
+                        "description": "用户id",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.UserIdReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "订单列表",
+                        "schema": {
+                            "$ref": "#/definitions/handler.OrderListRes"
+                        }
+                    },
+                    "400": {
+                        "description": "请求格式错误",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorReturn"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorReturn"
+                        }
+                    }
+                }
+            }
+        },
+        "/order/place": {
+            "post": {
+                "description": "创建一个新的订单",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "创建订单",
+                "parameters": [
+                    {
+                        "description": "订单信息",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.OrderPlaceReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "订单id",
+                        "schema": {
+                            "$ref": "#/definitions/handler.OrderIdReq"
+                        }
+                    },
+                    "400": {
+                        "description": "请求格式错误",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorReturn"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorReturn"
+                        }
+                    }
+                }
+            }
+        },
         "/product/create": {
             "post": {
                 "description": "创建一个新的商品",
@@ -731,6 +855,145 @@
         }
     },
     "definitions": {
+        "handler.OrderIdReq": {
+            "type": "object",
+            "required": [
+                "order_id",
+                "user_id"
+            ],
+            "properties": {
+                "order_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.OrderListRes": {
+            "type": "object",
+            "properties": {
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "address": {
+                                "type": "object",
+                                "properties": {
+                                    "city": {
+                                        "type": "string"
+                                    },
+                                    "country": {
+                                        "type": "string"
+                                    },
+                                    "state": {
+                                        "type": "string"
+                                    },
+                                    "streetAddress": {
+                                        "type": "string"
+                                    },
+                                    "zipCode": {
+                                        "type": "integer"
+                                    }
+                                }
+                            },
+                            "createdAt": {
+                                "type": "integer"
+                            },
+                            "email": {
+                                "type": "string"
+                            },
+                            "orderId": {
+                                "type": "string"
+                            },
+                            "userCurrency": {
+                                "type": "string"
+                            },
+                            "userId": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "handler.OrderPlaceReq": {
+            "type": "object",
+            "required": [
+                "items",
+                "user_currency",
+                "user_id"
+            ],
+            "properties": {
+                "address": {
+                    "type": "object",
+                    "required": [
+                        "city",
+                        "country",
+                        "state",
+                        "street_address",
+                        "zip_code"
+                    ],
+                    "properties": {
+                        "city": {
+                            "type": "string"
+                        },
+                        "country": {
+                            "type": "string"
+                        },
+                        "state": {
+                            "type": "string"
+                        },
+                        "street_address": {
+                            "type": "string"
+                        },
+                        "zip_code": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "required": [
+                            "cost",
+                            "product_id",
+                            "quantity"
+                        ],
+                        "properties": {
+                            "cost": {
+                                "type": "number"
+                            },
+                            "product_id": {
+                                "type": "integer"
+                            },
+                            "quantity": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                },
+                "user_currency": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.UserIdReq": {
+            "type": "object",
+            "required": [
+                "user_id"
+            ],
+            "properties": {
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "handler.addItemReq": {
             "type": "object",
             "required": [
